Finally fixed positioning so no scrollbars appear

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,12 @@
 #root {
   display: flex;
+  padding: 0px;
+  margin: 0px;
+}
+
+body {
+  padding: 0px;
+  margin: 0px;
 }
 
 #nav-container {
@@ -46,7 +53,6 @@
     height: 100vh;
     background-color: #1d1b1b;
     color: white;
-    align-items: center;
     font-family: Roboto;
   }
 
@@ -60,8 +66,8 @@
   }
 
   #main-col2 {
-    height: 50vh;
-    width: 0vw;
+    height: 90vh;
+    width: 21vw;
   }
 
   #S {
@@ -71,7 +77,7 @@
 
   #largeS {
     font-family: Roboto;
-    font-size: 800px;
+    font-size: 770px;
     color: #e9345b;
     text-shadow: 60px 0px 0px aqua;
     transform: rotate(-35deg);
